[project]
name = "dagster_tutorial"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.9",
    "pyodbc>=5.2.0",
    "polars>=1.33.1",
    "numpy>=2.0.2",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "ipykernel>=6.30.1",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_tutorial"
registry_modules = [
    "dagster_tutorial.components.*",
]


